objects/Business_Address__c.object
<CustomObject>
    <description>This is business address custom object in Dev25</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>MD relation between acct and BA</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Addresses</relationshipLabel>
        <relationshipName>Business_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyOwnerName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Owner Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Business Addresses</relationshipLabel>
        <relationshipName>Business_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Business Address</label>
    <nameField>
        <label>Business Address Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>